Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/funcInterfaces/LambdaTest1_neg2.out
LambdaTest1_neg2.java:13:28: compiler.err.non-static.cant.be.ref: kindname.variable, this
1 error
